# simple-python-cga

./: README.md  cga.py  init.py  pyproject.toml  readme  readme.md  setup.py
cga/: evolve.py
simple_python_cga.egg-info/: PKG-INFO  SOURCES.txt
