[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-python-cga"
version = "0.0.1"
authors = [
  { name="Yahred Gastelum", email="dr.yahred@outlook.es" },
]
description = "Simple implementation of the compact genetic algorithm proposed by Harik et. al"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Yahred/simple-python-cga"
"Bug Tracker" = "https://github.com/Yahred/simple-python-cga/issues"